# wasm-utils-rs

./: Cargo.toml  README.md  package.json
crates/ts-macro/: Cargo.toml
crates/ts-macro/src/: lib.rs
crates/ts-type/: Cargo.toml
crates/ts-type/src/: lib.rs  macros.rs
crates/utils-core/: Cargo.toml
crates/utils-core/src/: error.rs
example/rust/: Cargo.toml  README.md  package.json  tsconfig.json
example/rust/example-bindings/: example_bindings.cjs  example_bindings.js  example_bindings_bg.wasm  package.json
example/rust/scripts/: build.ts  types.ts
example/typescript/: package.json  tsconfig.json
example/typescript/src/: index.ts
